--- a/Assignment4/index.html
+++ b/Assignment4/index.html
@@ -3,7 +3,7 @@
 <head>
 
 <link rel="stylesheet" type="text/css" href="style.css">
-<title>Food Blog</title>
+<title>Foodies Blog</title>
 
 </head>
 
